# pyproject-template

./: .env.example  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
about/: index.html
docs/about/: about.md  license.md  release-notes.md
docs/integrations/: get_start.md
docs/tutorials/: poetry.md  pytest.md  ruff.md
license/: index.html
pytemplate/utils/: logger.py
release-notes/: index.html
root_package_name/: main.py
search/: search_index.json
tests/test_utils/: test_logger.py
